@@ -1,3 +1,10 @@
+1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* server-src/driverio.c (update_info_dumper): do not update
+	compression or dump rates if hwen called from
+	update_failed_dump_to_date
+	Reported by Michael Schmitz <mschmitz@sema.de>
+
 1998-11-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/dumper.c (main): reduce the size of the chunksize by
